# FAE_Linux

./:  .gitignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  flake.nix
.github/ISSUE_TEMPLATE/: bug---error-report.md  feature_request.md  game-update.md  question.md
.github/workflows/: c-cpp.yml  codeql.yml
dev/: rundevbranch.sh
fae/: filehelper.cpp  filehelper.hpp  logging.cpp  logging.hpp  main.cpp  patching.cpp  patching.hpp
scripts/: faeDeck.sh  faeDesktop.sh  fae_launch.sh
src/: fae_linux.cpp  library.cpp  main.cpp
src/helpers/: filehelper.cpp  filehelper.hpp  logging.cpp  logging.hpp  patching.cpp  patching.hpp
